<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LessonPlanFormat</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="choose">Choose materials</string>
    <string name="empty"></string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    

</resources>