<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
	    <TextView
	        android:id="@+id/tvdate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:gravity="left"
	        android:text="@string/date"
	        android:textSize="22sp" />
	
	    <DatePicker
	        android:id="@+id/datePicker1"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content" />
	
	    <TextView
	        android:id="@+id/tvsubject"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_marginLeft="14dp"
	        android:text="@string/subject"
	        android:textSize="22sp" />
	
	    <EditText
	        android:id="@+id/etsubject"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="14dp"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/tvdescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="8dp"
	        android:textSize="22sp"
	        android:text="@string/description" />
	
	    <EditText
	        android:id="@+id/etdescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="14dp" />
	
	    <Button
	        android:id="@+id/btchoose"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="14dp"
	        android:textSize="22sp" />
	
	    <TextView
	        android:id="@+id/tvResource"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="14dp"
	        android:textSize="22sp" />
	
	    <Button
	        android:id="@+id/btsave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="14dp"
	        android:textSize="22sp" />
    </LinearLayout>

</ScrollView>